# tracking-demo

./: README.md  config.yaml  environment.yml  pixi.toml  pyproject.toml  requirements.txt  test.webm  track_tags.py  trajectory analysis.ipynb
src/kalman/: __init__.py  calibrate.py  config.yaml  speedup.py  track_tags.py  utilities.py
