[project]
authors = [{name = "Alli Nilles", email = "anilles137@gmail.com"}]
dependencies = []
name = "kalman"
requires-python = ">= 3.11"
version = "0.1.0"
scripts = {tracking-main = "kalman:main"}

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[pypi-dependencies]
dt-apriltags = ">=3.1.7,<4"

[dependencies]
opencv = ">=4.13.0,<5"
numpy = ">=2.4.2,<3"
pandas = ">=3.0.1,<4"
pyyaml = ">=6.0.3,<7"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
kalman = { path = ".", editable = true }
